<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.kITa.MainActivity">

    <!-- Top toolbar with icons -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@drawable/toolbar_dropshadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- First row with Guide, Logo, and Search icons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white">

            <!-- Guide Icon -->
            <ImageButton
                android:id="@+id/guide_icon"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:background="@color/white"
                android:src="@drawable/ic_guide"
                android:contentDescription="guideIcon"
                app:tint="@color/green"
                />

            <!-- Logo Image -->
            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:padding="78dp"
                android:scaleType="centerCrop"
                android:src="@drawable/kitalogo"
                android:contentDescription="kitaLogo"/>

            <!-- Search Icon -->
            <ImageButton
                android:id="@+id/search_icon"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:background="@color/white"
                android:src="@drawable/ic_search"
                android:contentDescription="searchIcon"/>
        </LinearLayout>

        <!-- Second row with Bottom Navigation icons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/toolbar_dropshadow">

            <ImageButton
                android:id="@+id/nav_lost"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_lost"
                android:background="@color/white"
                android:contentDescription="lostIcon"
                />

            <ImageButton
                android:id="@+id/nav_found"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_found"
                android:background="@color/white"
                android:contentDescription="foundIcon"/>

            <ImageButton
                android:id="@+id/nav_chat"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_chat"
                android:background="@color/white"
                android:contentDescription="chatIcon"/>

            <ImageButton
                android:id="@+id/nav_notifications"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_notification"
                android:background="@color/white"
                android:contentDescription="notifIcon"/>

            <ImageButton
                android:id="@+id/nav_profile"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_profile"
                android:background="@color/white"
                android:contentDescription="profileIcon"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Main Bottom Navigation Bar -->


    <!-- Main Content Container -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RelativeLayout
            android:id="@+id/guide_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <!-- Guidelines Title -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="Lost and Found Guidelines"
                android:textColor="@color/green"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- For Finder Section -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="For Finder (Individuals who have found lost items)"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:justificationMode="inter_word"
                android:text="@string/FinderGuide"
                android:textSize="13sp" />

            <!-- For Claimant Section -->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="For Claimant (Owner of the lost item)"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:justificationMode="inter_word"
                android:text="@string/ClaimantGuide"
                android:textSize="13sp" />

            <!-- For Civil Security Services Section -->
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="For Civil Security Services"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="0dp"
                android:justificationMode="inter_word"
                android:text="@string/CivilSecurityGuide"
                android:textSize="13sp" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
